--- a/.github/workflows/wfc1.yml
+++ b/.github/workflows/wfc1.yml
@@ -8,17 +8,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: |
-          echo "wfc1 (1)" >> $GITHUB_STEP_SUMMARY
+          echo "wfc1 (1) $(date +"%H:%M:%S")" >> $GITHUB_STEP_SUMMARY
           sleep 1
-          echo "wfc1 (2)" >> $GITHUB_STEP_SUMMARY
+          echo "wfc1 (2) $(date +"%H:%M:%S")" >> $GITHUB_STEP_SUMMARY
           sleep 1
-          echo "wfc1 (3)" >> $GITHUB_STEP_SUMMARY
+          echo "wfc1 (3) $(date +"%H:%M:%S")" >> $GITHUB_STEP_SUMMARY
           sleep 1
-          echo "wfc1 (4)" >> $GITHUB_STEP_SUMMARY
+          echo "wfc1 (4) $(date +"%H:%M:%S")" >> $GITHUB_STEP_SUMMARY
           sleep 1
-          echo "wfc1 (5)" >> $GITHUB_STEP_SUMMARY
+          echo "wfc1 (5) $(date +"%H:%M:%S")" >> $GITHUB_STEP_SUMMARY
           sleep 1
-          echo "wfc1 (6)" >> $GITHUB_STEP_SUMMARY
+          echo "wfc1 (6) $(date +"%H:%M:%S")" >> $GITHUB_STEP_SUMMARY
   
   wfc1_job2:
     uses: ./.github/workflows/wfc2.yml
