--- a/.github/workflows/aaa1.yml
+++ b/.github/workflows/aaa1.yml
@@ -6,15 +6,8 @@ on:
       - main
     
   workflow_dispatch:
-
-concurrency:
-  group: AAA
-  cancel-in-progress: false
   
 jobs:
 
   call-workflow1:
-    uses: ./.github/workflows/wfc1.yml
-
-  call-workflow2:
-    uses: ./.github/workflows/wfc2.yml
+    uses: ./.github/workflows/bbb1.yml
