--- a/.github/workflows/bbb1.yml
+++ b/.github/workflows/bbb1.yml
@@ -3,9 +3,9 @@ name: bbb1
 on:      
   workflow_call:
 
-concurrency:
-  group: AAA
-  cancel-in-progress: false
+#concurrency:
+#  group: AAA
+#  cancel-in-progress: false
   
 jobs:
 
