--- a/.github/workflows/aaa1.yml
+++ b/.github/workflows/aaa1.yml
@@ -14,4 +14,6 @@ jobs:
       group: AAA
       cancel-in-progress: false
   
-    uses: ./.github/workflows/bbb1.yml
+    -
+      run: |
+        echo ${{ github.ref }}
