--- a/.github/workflows/aaa2.yml
+++ b/.github/workflows/aaa2.yml
@@ -9,7 +9,9 @@ on:
   
 jobs:
 
-  call-workflow2:
+  job2:
+    runs-on: ubuntu-latest
+
     concurrency:
       group: AAA
       cancel-in-progress: false
