--- a/.github/workflows/aaa1.yml
+++ b/.github/workflows/aaa1.yml
@@ -15,7 +15,8 @@ jobs:
     concurrency:
       group: AAA
       cancel-in-progress: false
-  
-    -
-      run: |
-        echo ${{ github.ref }}
+    
+    steps:
+      -
+        run: |
+          echo ${{ github.ref }}
