--- a/.github/workflows/aaa1.yml
+++ b/.github/workflows/aaa1.yml
@@ -9,7 +9,15 @@ on:
   
 jobs:
 
-  aaajob1:
+  aaajob1_1:
+    runs-on: ubuntu-latest
+    
+    steps:
+      -
+        run: |
+          echo "xxxxxxxxx"
+
+  aaajob1_2:
     runs-on: ubuntu-latest
     
     concurrency:
