--- a/.github/workflows/aaa2.yml
+++ b/.github/workflows/aaa2.yml
@@ -9,7 +9,15 @@ on:
   
 jobs:
 
-  aaajob2:
+  aaajob2_1:
+    runs-on: ubuntu-latest
+    
+    steps:
+      -
+        run: |
+          echo "xxxxxxxxx
+          
+  aaajob2_2:
     runs-on: ubuntu-latest
 
     concurrency:
