--- a/.github/workflows/aaa1.yml
+++ b/.github/workflows/aaa1.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
       -
         run: |
-          echo "xxxxxxxxx"
+          echo "xxxxxxxvxx"
 
   aaajob1_2:
     runs-on: ubuntu-latest
