--- a/.github/workflows/aaa2.yml
+++ b/.github/workflows/aaa2.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
       -
         run: |
-          echo "xxxxxxxxx
+          echo "xxxxxxxxx"
           
   aaajob2_2:
     runs-on: ubuntu-latest
