--- a/.github/workflows/aaa1.yml
+++ b/.github/workflows/aaa1.yml
@@ -22,7 +22,7 @@ jobs:
     
     concurrency:
       group: AAA
-      cancel-in-progress: true
+      cancel-in-progress: false
     
     steps:
       -
